--- a/src/components/get-started/appsco-tutorial-company-branding.html
+++ b/src/components/get-started/appsco-tutorial-company-branding.html
@@ -113,6 +113,14 @@
                 }
             },
 
+            ready: function() {
+                this.tutorialId = 'company_branding';
+                this.tutorialTitle = 'Company branding';
+                this.description = ' Upload logo and set company branding';
+                this.icon = 'icons:settings';
+                this.readme = 'https://support.appsco.com/hc/en-gb/articles/360000109512-Company-Branding';
+            },
+
             attached: function() {
                 this.tutorialId = 'company_branding';
                 this.tutorialTitle = 'Company branding';
