--- a/src/components/get-started/appsco-tutorial-share-resources.html
+++ b/src/components/get-started/appsco-tutorial-share-resources.html
@@ -152,6 +152,14 @@
                 }
             },
 
+            ready: function() {
+                this.tutorialId = 'share_resources';
+                this.tutorialTitle = 'Share resources';
+                this.description = 'Share resources to users';
+                this.icon = 'icons:list';
+                this.readme = 'https://support.appsco.com/hc/en-gb/articles/360000230631-How-to-share-resources-';
+            },
+
             attached: function() {
                 this.tutorialId = 'share_resources';
                 this.tutorialTitle = 'Share resources';
@@ -218,14 +226,14 @@
 
             step3: function(index, item, doneBuildingPopperHandler) {
                 var handleFunction = function() {
-                        var firstApplication = document.querySelector('* /deep/ div[content] /deep/ appsco-company-resources /deep/ appsco-company-resource-item'),
-                            firstApplicationSelector = document.querySelector('* /deep/ div[content] /deep/ appsco-company-resources /deep/ appsco-company-resource-item /deep/ div.select-action');
+                        var firstApplication = this._querySelector('* /deep/ div[content] /deep/ appsco-company-resources /deep/ appsco-company-resource-item'),
+                            firstApplicationSelector = this._querySelector('* /deep/ div[content] /deep/ appsco-company-resources /deep/ appsco-company-resource-item /deep/ div.select-action');
 
                         if (this.resourcesPageLoaded && !firstApplication) {
-                            var cover = this.buildCover(document.querySelector('* /deep/ div[content] /deep/ appsco-company-resources /deep/ div.load-more-box')),
-                                failElement = document.querySelector('* /deep/ #popper-fail-share-resource-tutorial'),
-                                closeButton = document.querySelector('* /deep/ #popper-fail-share-resource-tutorial paper-button'),
-                                popper = new Popper(document.querySelector('* /deep/ div[content] /deep/ appsco-company-resources'), failElement, {
+                            var cover = this.buildCover(this._querySelector('* /deep/ div[content] /deep/ appsco-company-resources /deep/ div.load-more-box')),
+                                failElement = this._querySelector('* /deep/ #popper-fail-share-resource-tutorial'),
+                                closeButton = this._querySelector('* /deep/ #popper-fail-share-resource-tutorial paper-button'),
+                                popper = new Popper(this._querySelector('* /deep/ div[content] /deep/ appsco-company-resources'), failElement, {
                                     placement: 'right-start'
                                 }),
                                 closeListener = function() {
@@ -262,15 +270,15 @@
             step5: function(index, item, doneBuildingPopperHandler) {
                 setTimeout(function() {
                     var checkerFunction;
-                    document.querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog').setAttribute(
+                    this._querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog').setAttribute(
                         'no-cancel-on-outside-click', true
                     );
-                    document.querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog').setAttribute(
+                    this._querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog').setAttribute(
                         'no-cancel-on-esc-key', true
                     );
 
                     checkerFunction = function() {
-                        var dialog = document.querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog appsco-account-list-item');
+                        var dialog = this._querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog appsco-account-list-item');
                         if (!dialog || !this.resourcesPageLoaded || !this.resourceShareAccountsLoaded) {
                             setTimeout(checkerFunction, 200);
                             return;
@@ -292,11 +300,11 @@
             },
 
             afterTutorialDone: function() {
-                document
-                    .querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog')
+                this
+                    ._querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog')
                     .removeAttribute('no-cancel-on-outside-click');
-                document
-                    .querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog')
+                this
+                    ._querySelector('* /deep/ appsco-share-resource /deep/ paper-dialog#dialog')
                     .removeAttribute('no-cancel-on-esc-key');
             }
         });
