--- a/src/components/get-started/appsco-tutorial-provisioning.html
+++ b/src/components/get-started/appsco-tutorial-provisioning.html
@@ -268,6 +268,20 @@
                 this.nextStep();
             },
 
+            step2: function(index, item, doneBuildingPopperHandler) {
+                this.handleStep(index, item, doneBuildingPopperHandler);
+            },
+
+            step3: function(index, item, doneBuildingPopperHandler) {
+                this.handleStep(index, item, doneBuildingPopperHandler);
+                setTimeout(function(){
+                    // Is firefox
+                    if(navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
+                        this.popperStep[index + 1].popper.popper.style.left = "200px";
+                    }
+                }.bind(this), 300);
+            },
+
             step4: function(index, item, doneBuildingPopperHandler) {
                 setTimeout(function() {
                     this.handleStep(index, item, doneBuildingPopperHandler);
